css/aboutme_style.css
*{
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}
nav{
    display: grid;
    grid-template-columns: auto auto auto auto;
}
nav a{
    text-align: center;
    padding: 10px;
    border: 1px solid silver;
    border-width: medium;
    background-color: black;
    color: silver;
}
body{
    background-color: silver;
}
#Divider{
    width: 90%;
    display: grid;
    grid-template-columns: 50% 50%;
    gap: 4%;
    padding: 20px;
    margin: 0 auto;
}
#left-container{
    display: grid;
    grid-template-columns: auto;
    background-color: black;
}
#right-container{
    display: grid;
    grid-template-columns: auto;
    border-color: silver;
    background-color: black;
}
.blue{
    color: rgb(59, 187, 219);
}

